k8s/overlays/stage/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: berget-website
  namespace: berget-web
spec:
  template:
    spec:
      containers:
        - name: berget-website
